--- a/Лабораторне заняття 2/Домашня робота 2.ipynb
+++ b/Лабораторне заняття 2/Домашня робота 2.ipynb
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1F/:MKSUdF\n"
+      "5CuD)Wv@k/\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -80,39 +80,58 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "k = 2, n = 10, empiric = 0.0, theoretical = 0.25\n",
-      "k = 2, n = 50, empiric = 0.24489795918367346, theoretical = 0.25\n",
-      "k = 2, n = 100, empiric = 0.2828282828282828, theoretical = 0.25\n",
-      "k = 2, n = 500, empiric = 0.25851703406813625, theoretical = 0.25\n",
-      "k = 2, n = 1000, empiric = 0.25325325325325326, theoretical = 0.25\n",
-      "k = 2, n = 5000, empiric = 0.2416483296659332, theoretical = 0.25\n",
-      "k = 2, n = 10000, empiric = 0.2528252825282528, theoretical = 0.25\n",
+      "k = 2, n = 10, empirical = 0.1111111111111111, theoretical = 0.859375\n",
+      "k = 2, n = 50, empirical = 0.1836734693877551, theoretical = 0.9999999\n",
+      "k = 2, n = 100, empirical = 0.20202020202020202, theoretical = 0.9999999\n",
+      "k = 2, n = 500, empirical = 0.1623246492985972, theoretical = 0.9999999\n",
+      "k = 2, n = 1000, empirical = 0.14714714714714713, theoretical = 0.9999999\n",
+      "k = 2, n = 5000, empirical = 0.15983196639327865, theoretical = 0.9999999\n",
+      "k = 2, n = 10000, empirical = 0.16681668166816682, theoretical = 0.9999999\n",
       "\n",
-      "k = 3, n = 10, empiric = 0.0, theoretical = 0.125\n",
-      "k = 3, n = 50, empiric = 0.10416666666666667, theoretical = 0.125\n",
-      "k = 3, n = 100, empiric = 0.12244897959183673, theoretical = 0.125\n",
-      "k = 3, n = 500, empiric = 0.13453815261044177, theoretical = 0.125\n",
-      "k = 3, n = 1000, empiric = 0.13527054108216433, theoretical = 0.125\n",
-      "k = 3, n = 5000, empiric = 0.12404961984793918, theoretical = 0.125\n",
-      "k = 3, n = 10000, empiric = 0.1279255851170234, theoretical = 0.125\n"
+      "k = 3, n = 10, empirical = 0.25, theoretical = 0.5078125\n",
+      "k = 3, n = 50, empirical = 0.041666666666666664, theoretical = 0.9999999\n",
+      "k = 3, n = 100, empirical = 0.08163265306122448, theoretical = 0.9999999\n",
+      "k = 3, n = 500, empirical = 0.07228915662650602, theoretical = 0.9999999\n",
+      "k = 3, n = 1000, empirical = 0.06012024048096192, theoretical = 0.9999999\n",
+      "k = 3, n = 5000, empirical = 0.07102841136454582, theoretical = 0.9999999\n",
+      "k = 3, n = 10000, empirical = 0.07081416283256652, theoretical = 0.9999999\n"
      ]
     }
    ],
    "source": [
     "# Місце для Вашого коду\n",
     "\n",
+    "from itertools import product\n",
+    "\n",
+    "# незрозуміло метод обчислення емпіричної ймовірності: по-ідеї необхідно згенерувати певну к-ть \n",
+    "# експериментів і в кожному перевіряти, чи випадало підряд k гербів. Навіщо Ви рахували к-ть \n",
+    "# входжень послідовності з k гербів?\n",
+    "\n",
+    "# повний перебір (перебір усіх можливих послідовностей з гербів і решок довжини n)\n",
+    "# працює неймовірно довго уже для n = 50\n",
+    "\n",
     "def teor(n, k):\n",
-    "    return 1 / (1 << k)\n",
+    "    space = ['H', 'T']\n",
+    "    sub = 'H' * k\n",
+    "    count = 0\n",
+    "    amount = 0\n",
+    "    for el in product(space, repeat=n):\n",
+    "        tmp = ''.join(el)\n",
+    "        if sub in tmp:\n",
+    "            count += 1\n",
+    "        amount += 1\n",
+    "        \n",
+    "    return count / amount\n",
+    "\n",
+    "\n",
+    "# реалізував емпіричну так, як у Вас\n",
     "\n",
     "\n",
     "def practice(n, k):\n",
-    "    count = 0\n",
     "    space = ['H', 'T']\n",
     "    test = ''.join(list(np.random.choice(space, n)))\n",
-    "    for i in range(len(test) - k):\n",
-    "        if test[i:i + k] == 'H' * k:\n",
-    "            count += 1\n",
-    "    return count / (n - k + 1)\n",
+    "    return test.count('H'*k) / (n - k + 1)\n",
+    "\n",
     "\n",
     "for k in [2, 3]:\n",
     "    print()\n",
@@ -140,16 +159,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n = 3, x_max = 6, teoretical = 0.4212962962962963, empirical = 0.4211\n",
-      "n = 2, x_max = 3, teoretical = 0.1388888888888889, empirical = 0.1396\n",
-      "n = 3, x_max = 5, teoretical = 0.2824074074074074, empirical = 0.2831\n"
+      "n = 3, x_max = 6, teoretical = 0.4212962962962963, empirical = 0.4241\n",
+      "n = 2, x_max = 3, teoretical = 0.1388888888888889, empirical = 0.1368\n",
+      "n = 3, x_max = 5, teoretical = 0.2824074074074074, empirical = 0.2794\n"
      ]
     }
    ],
@@ -202,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n = 3, s = 13, teoretical = 0.09722222222222222, empirical = 0.0967\n",
-      "n = 2, s = 5, teoretical = 0.1111111111111111, empirical = 0.1188\n",
-      "n = 3, s = 7, teoretical = 0.06944444444444445, empirical = 0.0698\n"
+      "n = 3, s = 13, teoretical = 0.09722222222222222, empirical = 0.098\n",
+      "n = 2, s = 5, teoretical = 0.1111111111111111, empirical = 0.1112\n",
+      "n = 3, s = 7, teoretical = 0.06944444444444445, empirical = 0.0704\n"
      ]
     }
    ],
