--- a/Лабораторне заняття 6/Додаткові завдання 6.ipynb
+++ b/Лабораторне заняття 6/Додаткові завдання 6.ipynb
@@ -38,15 +38,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n -- theoretical,  by full permute\n",
+      "\n",
+      "1\n",
+      "0 -- 0.08333333333333333, 1.0\n",
+      "\n",
+      "2\n",
+      "1 -- 0.16666666666666666, 0.08333333333333333\n",
+      "0 -- 0.08333333333333333, 0.9166666666666666\n",
+      "\n",
+      "3\n",
+      "3 -- 1.6666666666666667, 0.006944444444444444\n",
+      "1 -- 0.5, 0.22916666666666666\n",
+      "0 -- 0.08333333333333333, 0.7638888888888888\n",
+      "\n",
+      "4\n",
+      "6 -- 77.0, 0.0005787037037037037\n",
+      "3 -- 18.333333333333332, 0.02546296296296296\n",
+      "2 -- 5.5, 0.019097222222222224\n",
+      "1 -- 1.0, 0.3819444444444444\n",
+      "0 -- 0.08333333333333333, 0.5729166666666666\n",
+      "\n",
+      "5\n",
+      "10 -- 15396.333333333334, 4.8225308641975306e-05\n",
+      "6 -- 3230.0, 0.002652391975308642\n",
+      "4 -- 403.75, 0.005304783950617284\n",
+      "3 -- 95.0, 0.05304783950617284\n",
+      "2 -- 15.833333333333334, 0.07957175925925926\n",
+      "1 -- 1.6666666666666667, 0.4774305555555556\n",
+      "0 -- 0.08333333333333333, 0.3819444444444444\n",
+      "\n",
+      "6\n",
+      "15 -- 12926460.0, 4.018775720164609e-06\n",
+      "10 -- 2503751.25, 0.0002652391975308642\n",
+      "7 -- 169650.0, 0.0006630979938271605\n",
+      "6 -- 49481.25, 0.007073045267489712\n",
+      "4 -- 2283.75, 0.02652391975308642\n",
+      "3 -- 338.3333333333333, 0.08620273919753087\n",
+      "2 -- 36.25, 0.17903645833333334\n",
+      "1 -- 2.5, 0.4774305555555556\n",
+      "0 -- 0.08333333333333333, 0.22280092592592593\n"
+     ]
+    }
+   ],
    "source": [
     "# Місце для Вашого коду\n",
-    "\n"
+    "from collections import Counter, defaultdict\n",
+    "from itertools import product\n",
+    "\n",
+    "factorials = {1: 1, 0: 1}\n",
+    "\n",
+    "def factorial(n):\n",
+    "    if n not in factorials:\n",
+    "        factorials[n] = factorial(n-1) * n\n",
+    "    return factorials[n]\n",
+    "\n",
+    "\n",
+    "def binomial(n, k):\n",
+    "    if k == n:\n",
+    "        return 1\n",
+    "    elif k > n:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return int(factorial(n) / (factorial(n - k) * factorial(k)))\n",
+    "\n",
+    "\n",
+    "def permute(n):\n",
+    "    counts = defaultdict(int)\n",
+    "    amount = 0\n",
+    "    for el in product(range(1, 13), repeat=n):\n",
+    "        tmp = Counter(el)\n",
+    "        res = sum(map(lambda a: binomial(a, 2), tmp.values()))    # number of pairs\n",
+    "        counts[res] += 1\n",
+    "        amount += 1\n",
+    "    for el in counts:\n",
+    "        counts[el] /= amount\n",
+    "    return counts\n",
+    "\n",
+    "\n",
+    "def theoretical(n):\n",
+    "    tmp_n = n**2 - n\n",
+    "    res = {k:binomial(tmp_n, k) / 12 for k in range(binomial(n, 2)+1)}\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "print(\"n -- theoretical,  by full permute\")\n",
+    "for n in range(1, 7):\n",
+    "    tmp1 = theoretical(n)\n",
+    "    tmp2 = permute(n)\n",
+    "    print()\n",
+    "    print(n)\n",
+    "    for el in tmp2:\n",
+    "        print(f\"{el} -- {tmp1[el]}, {tmp2[el]}\")\n",
+    "        \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
