tried to do the addition task from lab6, but it sitll doesn't work

--- a/Лабораторне заняття 6/Додаткові завдання 6.ipynb
+++ b/Лабораторне заняття 6/Додаткові завдання 6.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -48,43 +48,49 @@
       "n -- theoretical,  by full permute\n",
       "\n",
       "1\n",
-      "0 -- 0.08333333333333333, 1.0\n",
+      "P(xi > 0) = 0.0\n",
+      "P(xi = 0.0) -- 1.0, 1.0\n",
       "\n",
       "2\n",
-      "1 -- 0.16666666666666666, 0.08333333333333333\n",
-      "0 -- 0.08333333333333333, 0.9166666666666666\n",
+      "P(xi > 0) = 0.08333333333333337\n",
+      "P(xi = 1.0) -- 0.15277777777777776, 0.08333333333333333\n",
+      "P(xi = 0.0) -- 0.8402777777777778, 0.9166666666666666\n",
       "\n",
       "3\n",
-      "3 -- 1.6666666666666667, 0.006944444444444444\n",
-      "1 -- 0.5, 0.22916666666666666\n",
-      "0 -- 0.08333333333333333, 0.7638888888888888\n",
+      "P(xi > 0) = 0.23611111111111116\n",
+      "P(xi = 3.0) -- 0.008914984139231823, 0.006944444444444444\n",
+      "P(xi = 1.0) -- 0.3236139242541152, 0.22916666666666666\n",
+      "P(xi = 0.0) -- 0.5932921944658779, 0.7638888888888888\n",
       "\n",
       "4\n",
-      "6 -- 77.0, 0.0005787037037037037\n",
-      "3 -- 18.333333333333332, 0.02546296296296296\n",
-      "2 -- 5.5, 0.019097222222222224\n",
-      "1 -- 1.0, 0.3819444444444444\n",
-      "0 -- 0.08333333333333333, 0.5729166666666666\n",
+      "P(xi > 0) = 0.42708333333333337\n",
+      "P(xi = 6.0) -- 0.00018359173648836404, 0.0005787037037037037\n",
+      "P(xi = 3.0) -- 0.05818109553952679, 0.02546296296296296\n",
+      "P(xi = 2.0) -- 0.1919976152804384, 0.019097222222222224\n",
+      "P(xi = 1.0) -- 0.3839952305608768, 0.3819444444444444\n",
+      "P(xi = 0.0) -- 0.3519956280141371, 0.5729166666666666\n",
       "\n",
       "5\n",
-      "10 -- 15396.333333333334, 4.8225308641975306e-05\n",
-      "6 -- 3230.0, 0.002652391975308642\n",
-      "4 -- 403.75, 0.005304783950617284\n",
-      "3 -- 95.0, 0.05304783950617284\n",
-      "2 -- 15.833333333333334, 0.07957175925925926\n",
-      "1 -- 1.6666666666666667, 0.4774305555555556\n",
-      "0 -- 0.08333333333333333, 0.3819444444444444\n",
+      "P(xi > 0) = 0.6180555555555556\n",
+      "P(xi = 10.0) -- 1.2499725671463014e-06, 4.8225308641975306e-05\n",
+      "P(xi = 6.0) -- 0.0038393388158578317, 0.002652391975308642\n",
+      "P(xi = 4.0) -- 0.05806999958984971, 0.005304783950617284\n",
+      "P(xi = 3.0) -- 0.15029882246784632, 0.05304783950617284\n",
+      "P(xi = 2.0) -- 0.2755478411910516, 0.07957175925925926\n",
+      "P(xi = 1.0) -- 0.3190553950633229, 0.4774305555555556\n",
+      "P(xi = 0.0) -- 0.1754804672848276, 0.3819444444444444\n",
       "\n",
       "6\n",
-      "15 -- 12926460.0, 4.018775720164609e-06\n",
-      "10 -- 2503751.25, 0.0002652391975308642\n",
-      "7 -- 169650.0, 0.0006630979938271605\n",
-      "6 -- 49481.25, 0.007073045267489712\n",
-      "4 -- 2283.75, 0.02652391975308642\n",
-      "3 -- 338.3333333333333, 0.08620273919753087\n",
-      "2 -- 36.25, 0.17903645833333334\n",
-      "1 -- 2.5, 0.4774305555555556\n",
-      "0 -- 0.08333333333333333, 0.22280092592592593\n"
+      "P(xi > 0) = 0.7771990740740741\n",
+      "P(xi = 15.0) -- 2.7296926390510155e-09, 4.018775720164609e-06\n",
+      "P(xi = 10.0) -- 8.515080281366427e-05, 0.0002652391975308642\n",
+      "P(xi = 7.0) -- 0.007679438862449721, 0.0006630979938271605\n",
+      "P(xi = 6.0) -- 0.024638199683692852, 0.007073045267489712\n",
+      "P(xi = 4.0) -- 0.137594869002777, 0.02652391975308642\n",
+      "P(xi = 3.0) -- 0.22422867541193292, 0.08620273919753087\n",
+      "P(xi = 2.0) -- 0.264269510306921, 0.17903645833333334\n",
+      "P(xi = 1.0) -- 0.20048031816387107, 0.4774305555555556\n",
+      "P(xi = 0.0) -- 0.07350944999341938, 0.22280092592592593\n"
      ]
     }
    ],
@@ -92,6 +98,7 @@
     "# Місце для Вашого коду\n",
     "from collections import Counter, defaultdict\n",
     "from itertools import product\n",
+    "from scipy.special import binom\n",
     "\n",
     "factorials = {1: 1, 0: 1}\n",
     "\n",
@@ -101,21 +108,12 @@
     "    return factorials[n]\n",
     "\n",
     "\n",
-    "def binomial(n, k):\n",
-    "    if k == n:\n",
-    "        return 1\n",
-    "    elif k > n:\n",
-    "        return 0\n",
-    "    else:\n",
-    "        return int(factorial(n) / (factorial(n - k) * factorial(k)))\n",
-    "\n",
-    "\n",
     "def permute(n):\n",
     "    counts = defaultdict(int)\n",
     "    amount = 0\n",
     "    for el in product(range(1, 13), repeat=n):\n",
     "        tmp = Counter(el)\n",
-    "        res = sum(map(lambda a: binomial(a, 2), tmp.values()))    # number of pairs\n",
+    "        res = sum(map(lambda a: binom(a, 2), tmp.values()))    # number of pairs\n",
     "        counts[res] += 1\n",
     "        amount += 1\n",
     "    for el in counts:\n",
@@ -123,9 +121,11 @@
     "    return counts\n",
     "\n",
     "\n",
+    "# FIXME it doesn't work correctly\n",
     "def theoretical(n):\n",
     "    tmp_n = n**2 - n\n",
-    "    res = {k:binomial(tmp_n, k) / 12 for k in range(binomial(n, 2)+1)}\n",
+    "    res = {k:binom(tmp_n, k) / 12 ** k  * 11 ** (n**2 - n - k) / 12 ** (n**2 - n - k) \n",
+    "                   for k in range(int(binom(n, 2))+1)}\n",
     "    return res\n",
     "\n",
     "\n",
@@ -135,8 +135,9 @@
     "    tmp2 = permute(n)\n",
     "    print()\n",
     "    print(n)\n",
+    "    print(\"P(xi > 0) =\", 1-tmp2[0])\n",
     "    for el in tmp2:\n",
-    "        print(f\"{el} -- {tmp1[el]}, {tmp2[el]}\")\n",
+    "        print(f\"P(xi = {el}) -- {tmp1[el]}, {tmp2[el]}\")\n",
     "        \n"
    ]
   },
@@ -164,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
